eks-lab/httpd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arista-sample-httpd-app
  namespace: arista-eks-activity
spec:
  replicas: 2
  selector:
    matchLabels:
      app: httpd-app
  template:
    metadata:
      labels:
        app: httpd-app
    spec:
      containers:
      - name: httpd-app
        image: hashicorp/http-echo:latest
        args:
        - "-text=$(WELCOME_MESSAGE)"
        ports:
        - containerPort: 5678
