eks-lab/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arista-nginx-deployment
  namespace: arista-eks-activity
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      serviceAccountName: arista-nginx-service-account
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
