eks-lab/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arista-nginx-service
  namespace: arista-eks-activity
spec:
  type: LoadBalancer
  selector:
    name: uploadsvc
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
