eks-lab/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arista-echo-service
  namespace: arista-eks-activity
spec:
  selector:
    app: echo-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
