eks-lab/ingress-with-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arista-echo-app-ingress
  namespace: arista-eks-activity
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "arista-echoapp.sctp-sandbox.com"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"  # This triggers certificate issuance
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - arista-echoapp.sctp-sandbox.com
    secretName: arista-tls  # This is where the certificate will be stored
  rules:
  - host: arista-echoapp.sctp-sandbox.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: arista-echo-service
            port:
              number: 80
